--- a/html/main/carousel.css
+++ b/html/main/carousel.css
@@ -1,7 +1,17 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
-
+@font-face {
+			font-family: 'Geometr706 Md BT';
+			src: url('./webfont/font.eot');
+    		src: url('./webfont/font.eot?#iefix') format('embedded-opentype'),
+         url('./webfont/font.woff2') format('woff2'),
+         url('./webfont/font.woff') format('woff'),
+         url('./webfont/font.ttf') format('truetype'),
+         url('./webfont/font.svg#geometr706_md_btblack') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 body {
   color: #5a5a5a;
   font-family: "Nunito";
