--- a/html/main/carousel.css
+++ b/html/main/carousel.css
@@ -26,7 +26,7 @@ h1, h2, h3{
 h1{
   /*text-shadow: rgba(0, 0, 0, 0.7) 0px 0px 10px;*/
 }
-.carousel-caption > h1{
+.carousel-caption > div > h1{
   text-shadow: rgba(0, 0, 0, 0.1) 0px 0px 30px;
   font-size: 40px;
 }
@@ -118,7 +118,16 @@ div.container.marketing{
   height: 50%;
   
 }
-
+.fbheaderimage2{
+  width: 100%;
+  height: 50%;
+  position: relative;
+  padding-bottom: 37%;
+  top: 0px;
+  left: 0px;
+  background-position: center;  
+  background-size: 100% auto;
+}
 [class*="col-"] {
   padding: 0px;
   margin: 0px;
@@ -191,7 +200,7 @@ div.container.marketing{
 .pb-photo{
   text-align: center;
   background-image: url(Pb2.jpg);
-  background-color: #F5F5F5;
+  background-color: #F0F0EF;
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -285,6 +294,19 @@ a, a:link, a:visited, a:hover, a:active{
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+    position: absolute;
+    top: 80px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    height: 100%;
 
 }
 
@@ -388,8 +410,9 @@ a, a:link, a:visited, a:hover, a:active{
     /*margin-top: 120px;*/
     font-size: 60px;
   }
-  .carousel-caption > h1{
+  .carousel-caption > div > h1{
   	text-shadow: rgba(0, 0, 0, 0) 0px 0px 30px;
   	font-size: 80px;
   }
+
 }
